--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "exhandlers": "^1.0.0",
     "express": "^4.21.1",
-    "express-async-handler": "^1.2.0",
     "mongoose": "^8.8.0"
   }
 }
