--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "nodemon": "^3.1.7"
   },
   "dependencies": {
-    "exhandlers": "^1.0.4",
-    "express": "^4.21.1",
-    "mongoose": "^8.8.0"
+    "exhandlers": "^1.0.9",
+    "express": "^4.21.1"
   }
 }
